--- a/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
+++ b/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
@@ -20,6 +20,7 @@
         <MenuItem Header="LiveTour" Click="OpenLiveTourForm" FontSize="24"></MenuItem>
             <MenuItem Header="Statistics" FontSize="24" Click="OpenTourStatisticForm"></MenuItem>
             <MenuItem Header="Tour Requests" FontSize="24" Click="OpenTourRequestsForm"></MenuItem>
+            <MenuItem Header="Statistics on Tour Requests" FontSize="24" Click="OpenTourRequestsStatisticsForm"></MenuItem>
         </Menu>
         <DataGrid x:Name="DataPanel" Margin="116,279,116,216"/>
         <Label Content="Label" HorizontalAlignment="Left" Margin="894,170,0,0" VerticalAlignment="Top"/>
