--- a/InitialProject/InitialProject/View/Owner/StatisticView.xaml
+++ b/InitialProject/InitialProject/View/Owner/StatisticView.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="620" d:DesignWidth="1024"
       Title="StatisticPage">
 
-    <Grid Background ="White">
+    <Grid Background ="White" Loaded="OnPageLoad">
         <Label Content="Choose accommodation" HorizontalAlignment="Left" Margin="10,18,0,0" VerticalAlignment="Top" Height="34" Width="226" FontSize="20"/>
         <Label x:Name="Label1" Visibility="Hidden" Content="Detect when the accommodation was the buisiest" HorizontalAlignment="Left" Margin="588,13,0,0" VerticalAlignment="Top" Width="352" FontSize="15"/>
         <Label Content="Choose method for statistic" HorizontalAlignment="Left" Margin="10,546,0,0" VerticalAlignment="Top" FontSize="20"/>
