--- a/InitialProject/InitialProject/View/Guest1/ForumPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/ForumPage.xaml
@@ -12,9 +12,9 @@
             <DataGrid.Columns>                
                 <DataGridTextColumn Width="*" Header="Location" Binding="{Binding City}"/>
                 <DataGridTextColumn Width="*" Header="Number of replies" Binding="{Binding NumberOfReplies}"/>
-                <DataGridTextColumn Width="*" Header="Status(is discussion still open)" Binding="{Binding NumberOfReplies}"/>
+                <DataGridTextColumn Width="*" Header="Status(is discussion still open)" Binding="{Binding IsActive}"/>
                 <DataGridTextColumn Width="*" Header="User that started discussion" Binding="{Binding Guest1.Username}"/>
-                <DataGridTextColumn Width="*" Header="Very useful" Binding="{Binding Date}"/>
+                <DataGridTextColumn Width="*" Header="Very useful" Binding="{Binding VeryUseful}"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="Start new discussion" Canvas.Top="492" FontSize="20" Height="41" Width="228" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="2" Click="Button_Click"/>
