--- a/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
+++ b/InitialProject/InitialProject/View/Guest1/GradeOwnerForm.xaml
@@ -47,15 +47,15 @@
         </StackPanel>
         <Rectangle Height="42" Canvas.Left="394" Stroke="Black" Canvas.Top="110" Width="194" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Rate accommodation:" FontSize="20" Canvas.Left="10" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="-8"/>
-        <DataGrid ItemsSource="{Binding Hotels}" FontSize="16" Height="75" Width="1289"  Canvas.Left="10" Canvas.Top="29" HorizontalAlignment="Center" VerticalAlignment="Top" Loaded="OnLoad" AutoGenerateColumns="False">
+        <DataGrid x:Name="dataGrid" ItemsSource="{Binding Hotels}" FontSize="16" Height="69" Width="1289"  Canvas.Left="10" Canvas.Top="29" HorizontalAlignment="Center" VerticalAlignment="Top" Loaded="OnLoad" AutoGenerateColumns="False">
             <DataGrid.Columns>
 
-                <DataGridTextColumn Header="Hotel Name" Binding="{Binding Name }" />
-                <DataGridTextColumn Header="City" Binding="{Binding City}" />
-                <DataGridTextColumn Header="Country" Binding="{Binding Country}" />
-                <DataGridTextColumn Header="Type" Binding="{Binding TypeOfHotel}" />
-                <DataGridTextColumn Header="Number of Guests" Binding="{Binding MaxNumberOfGuests}" />
-                <DataGridTextColumn Header="Number of Days" Binding="{Binding MinNumberOfDays}" />
+                <DataGridTextColumn Width="*" Header="Hotel Name" Binding="{Binding Name }" />
+                <DataGridTextColumn Width="*" Header="City" Binding="{Binding City}" />
+                <DataGridTextColumn Width="*" Header="Country" Binding="{Binding Country}" />
+                <DataGridTextColumn Width="*" Header="Type" Binding="{Binding TypeOfHotel}" />
+                <DataGridTextColumn Width="*" Header="Number of Guests" Binding="{Binding MaxNumberOfGuests}" />
+                <DataGridTextColumn Width="*" Header="Number of Days" Binding="{Binding MinNumberOfDays}" />
 
             </DataGrid.Columns>
         </DataGrid>
