--- a/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/VisitedAccommodationsPage.xaml
@@ -17,20 +17,28 @@
     </Page.Resources>
 
     <Canvas Background="White">
-        <DataGrid x:Name="DataPanel" Loaded="OnLoad" FontSize="16" Height="212" Canvas.Left="27" Canvas.Top="304" Width="1267" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        
         <Label Content="How owners rated you:" FontSize="20" Canvas.Left="28" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Visited accommodations:" FontSize="20" Canvas.Left="29" Canvas.Top="-5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <DataGrid   AutoGenerateColumns="False" ItemsSource="{Binding VisitedHotels}" SelectedItem="{Binding SelectedHotel}" FontSize="16" Height="194" Width="1266" Canvas.Left="28" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="LoadVisited">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Path = VisitedHotels,UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedHotel}" FontSize="16" Height="194" Width="1266" Canvas.Left="28" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" Loaded="LoadVisited">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Hotel Name" Binding="{Binding Name}" />
-                <DataGridTextColumn Header="City" Binding="{Binding City}" />
-                <DataGridTextColumn Header="Country" Binding="{Binding Country}" />
-                <DataGridTextColumn Header="Type" Binding="{Binding TypeOfHotel}" />
-                <DataGridTextColumn Header="Number of Guests" Binding="{Binding MaxNumberOfGuests}" />
-                <DataGridTextColumn Header="Number of Days" Binding="{Binding MinNumberOfDays}" />
-                <DataGridTextColumn Header="Grade Status" Binding="{Binding GradeStatus}" />
+                <DataGridTextColumn Width="*" Header="Hotel Name" Binding="{Binding Name}" />
+                <DataGridTextColumn Width="*" Header="City" Binding="{Binding City}" />
+                <DataGridTextColumn Width="*" Header="Country" Binding="{Binding Country}" />
+                <DataGridTextColumn Width="*" Header="Type" Binding="{Binding TypeOfHotel}" />
+                <DataGridTextColumn Width="*" Header="Number of Guests" Binding="{Binding MaxNumberOfGuests}" />
+                <DataGridTextColumn Width="*" Header="Number of Days" Binding="{Binding MinNumberOfDays}" />
+                <DataGridTextColumn Width="*" Header="Grade Status" Binding="{Binding GradeStatus}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Button" Canvas.Left="149" Canvas.Top="240" Click="Button_Click"/>
+        <Button Content="Rate accomodation" FontSize="20" Canvas.Left="29" Canvas.Top="236" Click="Button_Click" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <DataGrid x:Name="DataPanel" AutoGenerateColumns="False" ItemsSource="{Binding Path = FilteredGrades,UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedHotel}" FontSize="16" Height="212" Canvas.Left="27" Canvas.Top="304" Width="1267" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="*" Header="Hotel Name" Binding="{Binding Name}" />
+                <DataGridTextColumn Width="*" Header="Cleanliness" Binding="{Binding Cleanliness}" />
+                <DataGridTextColumn Width="*" Header="Respecting" Binding="{Binding Respecting}" />
+                <DataGridTextColumn Width="*" Header="Addiotional comment" Binding="{Binding CommentText}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Canvas>
 </Page>
